--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <h3 class="name">Ullash Deb Nath</h3>
-                    <h3 class="sub-name">Student</h3>
+                    <h3 class="sub-name">Tech Enthusiast</h3>
                 </div>
             </div>
 
@@ -42,11 +42,14 @@
                 <div class="left">
                     <div class="about-container">
                         <h3 class="title">About</h3>
-                        <p class="text">I am a passionate student from Bangladesh. Currently I am doing B.Sc. in Computer Science and Engineering (CSE) at Premier University.</p>
+                        <p class="text">I am a passionate student from Bangladesh. Currently, I am doing Bachelor of Science in Computer Science and Engineering at Premier University.</p>
                     </div>
                     <div class="icons-container">
                         <a href="https://www.facebook.com/Ullash.Deb.Nath.1" class="icon">
                             <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="https://www.instagram.com/Ullash_Deb_Nath/" class="icon">
+                            <i class="fab fa-instagram"></i>
                         </a>
                         <a href="https://twitter.com/Ullash_Deb_Nath" class="icon">
                             <i class="fab fa-twitter"></i>
@@ -57,11 +60,14 @@
                         <a href="https://github.com/Ullash-Deb-Nath" class="icon">
                             <i class="fab fa-github"></i>
                         </a>
+                        <a href="https://www.reddit.com/user/Ullash_Deb_Nath" class="icon">
+                            <i class="fab fa-reddit"></i>
+                        </a>
 
                     </div>
                     <div class="buttons-wrap">
                         <div class="follow-wrap">
-                            <a href="#" class="follow">Follow</a>
+                            <a href="https://sites.google.com/view/ullashdebnath/" class="follow">Follow</a>
                         </div>
                         <div class="share-wrap">
                             <a href="#" class="share">Share</a>
@@ -79,7 +85,7 @@
                         <h3 class="number-title">Following</h3>
                     </div>
                     <div>
-                        <h3 class="number">2.6K</h3>
+                        <h3 class="number">3.2K</h3>
                         <h3 class="number-title">Followers</h3>
                     </div>
                 </div>
